--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,16 @@
         <activity
             android:name=".UI.activities.LoginActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
-        <!-- Các màn hình khác -->
+        <!-- ======= CÁC MÀN HÌNH KHÁC ======= -->
+
         <activity android:name=".UI.activities.SignUpActivity" android:exported="false" />
         <activity android:name=".UI.activities.HomeActivity" android:exported="false" />
         <activity android:name=".UI.activities.SettingsActivity" android:exported="false" />
@@ -38,6 +41,9 @@
         <activity android:name=".UI.activities.CategoryExpenseActivity" android:exported="false" />
         <activity android:name=".UI.activities.IncomeStatisticActivity" android:exported="false" />
         <activity android:name=".UI.activities.LanguageSettingActivity" android:exported="false" />
+
+        <!-- ======= THÊM MÀN HÌNH THÊM VÍ ======= -->
+        <activity android:name=".UI.activities.AddWalletActivity" android:exported="false" />
 
     </application>
 
