--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.finmate">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -17,7 +19,7 @@
 
         <!-- Màn hình đăng nhập (Launcher) -->
         <activity
-            android:name=".UI.activities.LoginActivity"
+            android:name=".UI.activities.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,9 +27,8 @@
             </intent-filter>
         </activity>
 
-        <!-- Các màn hình khác -->
         <activity android:name=".UI.activities.SignUpActivity" android:exported="false" />
-        <activity android:name=".UI.activities.HomeActivity" android:exported="false" />
+        <activity android:name=".UI.activities.LoginActivity" android:exported="false" />
         <activity android:name=".UI.activities.SettingsActivity" android:exported="false" />
         <activity android:name=".UI.activities.FriendActivity" android:exported="false" />
         <activity android:name=".UI.activities.WalletActivity" android:exported="false" />
