--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ material = "1.13.0"
 mpandroidchart = "v3.1.0"
 constraintlayout = "2.2.1"
 room = "2.6.1"
+retrofit = "2.9.0"
+gson = "2.10.1"
 
 [libraries]
 # Thêm thư viện Hilt
@@ -24,6 +26,10 @@ mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart", version.ref = "
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
