--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,11 @@
         <activity android:name=".ui.home.HomeActivity" android:exported="false" />
 
         <!-- ======= CÁC MÀN HÌNH KHÁC (Vẫn ở package cũ chưa move) ======= -->
-        <activity android:name=".ui.activities.SettingsActivity" android:exported="false" />
+        <activity android:name=".ui.settings.SettingsActivity" android:exported="false" />
         <activity android:name=".ui.friend.FriendActivity" android:exported="false" />
         <activity android:name=".ui.home.WalletActivity" android:exported="false" />
-        <activity android:name=".ui.activities.AccountActivity" android:exported="false" />
-        <activity android:name=".ui.activities.StatisticActivity" android:exported="false" />
+        <activity android:name=".ui.auth.AccountActivity" android:exported="false" />
+        <activity android:name=".ui.transaction.StatisticActivity" android:exported="false" />
         <activity android:name=".ui.activities.AddTransactionActivity" android:exported="false" />
         <activity android:name=".ui.activities.CategoryIncomeActivity" android:exported="false" />
         <activity android:name=".ui.activities.CategoryExpenseActivity" android:exported="false" />
